# stocks-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  mcp_auth.py  my_server.py  persistent_server.py  persistent_server_v2.py  portfolio_memory.py  portfolio_memory_tools.py  portfolio_store.py  portfolio_store_v2.py  portfolio_tools.py  portfolio_tools_v2.py  pyproject.toml
config/: allowed-emails.txt
docs/: investment-agent-gpt.md  portfolio-memory.md
